# mistralai-narutoverse-chatbot

./: README.md
backend/: .env-example  .gitignore  beyond_rag.py  consts.py  pyproject.toml  rag.py  requirements-dev.txt  requirements.txt
backend/app/: app.py  llm_workflow.py  rag.py  routes.py
backend/database/: database.py
backend/datamodels/: enums.py  models.py
backend/llm/: llm_workflow.py  prompts.py  rag.py
backend/llm/vectordb/04ff8794-cca5-40f4-8aec-441800507014/: index_metadata.pickle
backend/llm/vectordb/d7693678-1590-42fa-819c-bfe81798ff39/: index_metadata.pickle
backend/llm/vectordb/e8efe2ac-ae8d-44c8-a494-acb1bae14ccc/: index_metadata.pickle
backend/scraper/: scraper.py
backend/utils/: consts.py  exceptions.py  logger.py
frontend/: .gitignore  package.json
frontend/api/: delete-chat.ts  fetch-character.ts  fetch-characters.ts  fetch-chat-history.ts  fetch-chat-ids.ts  fetch-stream.ts  fetch-utils.ts
frontend/app/: page.tsx
frontend/app/chat/: layout.tsx  page.tsx  styles.css
frontend/app/settings/: layout.tsx  page.tsx
frontend/components/: character-search.tsx  chat-sidebar.tsx  chat-ui.tsx  header.tsx  icons.tsx  navbar.tsx  theme-switch.tsx
frontend/components/skeletons/: chat-sidebar.tsx  chat-ui.tsx  common.ts
frontend/config/: site.ts
frontend/hooks/: use-characters.ts  use-characters.tsx  use-thread-id.ts  use-window-size.ts
frontend/layouts/: chat.tsx  default.tsx  footer.tsx
frontend/pages/: _app.tsx  index.tsx
frontend/pages/api/: fetch-character.ts  fetch-characters.ts  fetch-chat-history.ts  fetch-chat-ids.ts  fetch-stream.ts
frontend/pages/chat/: index.tsx
frontend/styles/: globals.css
frontend/types/: enums.ts  index.ts
(+2 files in other folders)
